Added files to /gcc_nt.. from previos commit

--- a/spider27_old/src/gcc_ntox86/Makefile
+++ b/spider27_old/src/gcc_ntox86/Makefile
@@ -38,7 +38,7 @@ LD  = qcc
 CFLAGS  = -V$(PLATFORM) -w5 $(OPTIM) $(DEBUG) $(PHABOPTS) -I.
 CXXFLAGS = $(CFLAGS)
 LDFLAGS = -V$(PLATFORM) -Bstatic $(DEBUG) -l phexlib -l socket $(ABLIB) $(PHABOPTS)
-SDFLAGS = -V$(PLATFORM) -Bdynamic $(DEBUG) -l phexlib -l socket -l asound -l snmp $(ABLIB) $(PHABOPTS)
+SDFLAGS = -V$(PLATFORM) -Bdynamic $(DEBUG) -l phexlib -l socket -l asound $(ABLIB) $(PHABOPTS)
 
 VPATH = ..
 
