Its working. In debug mode added astronomic time of delayed in select functions. Added and changed timeouts by write and recieve from port. Routing thread turned OFF!!!!!

--- a/modbus_srv/Makefile
+++ b/modbus_srv/Makefile
@@ -1,10 +1,10 @@
 CC=qcc
-CFLAGS=-O -w9
+CFLAGS=-O -w8
 LDFLAGS=
 
-OBJS = modbus.o modbus_srv.o system.o lbuffer.o
-SRCS = modbus.cpp modbus_srv.cpp system.cpp lbuffer.cpp
-HDRS = modbus.h modbus_srv.h system.h lbuffer.h global.h types.h
+OBJS = modbus.o modbus_srv.o system.o lbuffer.o routeinfo.o
+SRCS = modbus.cpp modbus_srv.cpp system.cpp lbuffer.cpp routeinfo.cpp
+HDRS = modbus.h modbus_srv.h system.h lbuffer.h global.h types.h routeinfo.h
 
 all: 
 	$(CC) $(SRCS) -o modbus_srv $(CFLAGS) $(LDFLAGS) -lsocket
