--- a/trunk/spider27_old/src/gcc_ntox86/config.ini
+++ b/trunk/spider27_old/src/gcc_ntox86/config.ini
@@ -7,142 +7,118 @@ name=Святошинско-Броварская
 color=0xEE1111
 
 # Станции
-stationNum=15
+stationNum=16
 [station]
 id=0
-name=пр. Палладина
+name= Академгородок 6
 lineID=0
-x=10
-y=6
+x=18
+y=8
 [station]
 id=1
-name=Берестейская
+name= Академгородок 2
 lineID=0
-x=11
-y=17
+x=6
+y=8
 [station]
 id=2
-name=Шулявская (н/н)
+name=Берестейская
 lineID=0
-x=16
-y=29
+x=6
+y=24
 [station]
 id=3
 name=Шулявская (в/н)
 lineID=0
-x=16
-y=39
+x=17
+y=35
 [station]
 id=4
-name=Политехн. институт
+name=Шулявская (н/н)
 lineID=0
-x=25
-y=52
+x=17
+y=48
 [station]
 id=5
-name=Вокзальная
+name=Политехн. институт
 lineID=0
-x=32
-y=64
+x=30
+y=54
 [station]
 id=6
-name=Университет (н/н)
+name=Вокзальная
 lineID=0
-x=41
-y=76
+x=30
+y=75
 [station]
 id=7
 name=Университет (в/н)
 lineID=0
-x=41
-y=86
+x=44
+y=78
 [station]
 id=8
+name=Университет (н/н)
+lineID=0
+x=44
+y=91
+[station]
+id=9
 name=Театральная
 lineID=0
 x=60
-y=86
+y=91
 [station]
-id=9
+id=10
 name=Крещатик I
 lineID=0
 x=67
-y=72
+y=73
 [station]
-id=10
+id=11
 name=Крещатик II (н/н)
 lineID=0
 x=74
 y=58
 [station]
-id=11
+id=12
 name=Крещатик II (в/н)
 lineID=0
 x=74
-y=48
-[station]
-id=12
-name=Арсенальная (в/н)
-lineID=0
-x=87
-y=37
+y=44
 [station]
 id=13
 name=Арсенальная (н/н)
 lineID=0
 x=87
-y=27
+y=41
 [station]
 id=14
+name=Арсенальная (в/н)
+lineID=0
+x=87
+y=27
+[station]
+id=15
 name=Лесная
 lineID=0
-x=90
-y=12
+x=91
+y=8
 
 # Эскалаторы
 escalatorNum=46
 
-# пр. Палладина
-[escalator]
-id=43
-stationID=0
-type=1
-enabled=0
-num=1
-ip=192.168.15.3
-[escalator]
-id=44
-stationID=0
-type=1
-enabled=0
-num=2
-ip=192.168.15.3
-[escalator]
-id=45
-stationID=0
-type=1
-enabled=0
-num=3
-ip=192.168.15.3
-[escalator]
-id=46
-stationID=0
-type=1
-enabled=0
-num=4
-ip=192.168.15.3
-
 # Берестейская
 [escalator]
 id=1
-stationID=1
+stationID=2
 type=1
 enabled=0
 num=1
 ip=192.168.2.3
 [escalator]
 id=2
-stationID=1
+stationID=2
 type=1
 enabled=0
 num=2
@@ -151,21 +127,21 @@ ip=192.168.2.3
 # Шулявская (н/н)
 [escalator]
 id=3
-stationID=2
+stationID=3
 type=1
 enabled=0
 num=1
 ip=192.168.3.3
 [escalator]
 id=4
-stationID=2
+stationID=3
 type=1
 enabled=0
 num=2
 ip=192.168.3.3
 [escalator]
 id=5
-stationID=2
+stationID=3
 type=1
 enabled=0
 num=3
@@ -174,21 +150,21 @@ ip=192.168.3.3
 # Шулявская (в/н)
 [escalator]
 id=6
-stationID=3
+stationID=4
 type=1
 enabled=0
 num=1
 ip=192.168.4.3
 [escalator]
 id=7
-stationID=3
+stationID=4
 type=1
 enabled=0
 num=2
 ip=192.168.4.3
 [escalator]
 id=8
-stationID=3
+stationID=4
 type=1
 enabled=0
 num=3
@@ -197,21 +173,21 @@ ip=192.168.4.3
 # Политехн. институт
 [escalator]
 id=9
-stationID=4
+stationID=5
 type=2
-enabled=1
+enabled=0
 num=1
 ip=192.168.5.3
 [escalator]
 id=10
-stationID=4
+stationID=5
 type=2
-enabled=1
+enabled=0
 num=2
 ip=192.168.5.3
 [escalator]
 id=11
-stationID=4
+stationID=5
 type=2
 enabled=1
 num=3
@@ -220,67 +196,67 @@ ip=192.168.5.3
 # Вокзальная
 [escalator]
 id=12
-stationID=5
+stationID=6
 type=1
 enabled=0
 num=1
 ip=192.168.6.3
 [escalator]
 id=13
-stationID=5
+stationID=6
 type=1
 enabled=0
 num=2
 ip=192.168.6.3
 [escalator]
 id=14
-stationID=5
+stationID=6
 type=1
 enabled=0
 num=3
 ip=192.168.6.3
 
-# Университет (н/н)
+# Университет (в/н)
 [escalator]
 id=15
-stationID=6
+stationID=7
 type=1
 enabled=0
 num=1
 ip=192.168.7.3
 [escalator]
 id=16
-stationID=6
+stationID=7
 type=1
 enabled=0
 num=2
 ip=192.168.7.3
 [escalator]
 id=17
-stationID=6
+stationID=7
 type=1
 enabled=0
 num=3
 ip=192.168.7.3
 
-# Университет (в/н)
+# Университет (н/н)
 [escalator]
 id=18
-stationID=7
+stationID=8
 type=1
 enabled=0
 num=1
 ip=192.168.8.3
 [escalator]
 id=19
-stationID=7
+stationID=8
 type=1
 enabled=0
 num=2
 ip=192.168.8.3
 [escalator]
 id=20
-stationID=7
+stationID=8
 type=1
 enabled=0
 num=3
@@ -289,28 +265,28 @@ ip=192.168.8.3
 # Театральная
 [escalator]
 id=21
-stationID=8
+stationID=9
 type=1
 enabled=0
 num=1
 ip=192.168.9.3
 [escalator]
 id=22
-stationID=8
+stationID=9
 type=1
 enabled=0
 num=2
 ip=192.168.9.3
 [escalator]
 id=23
-stationID=8
+stationID=9
 type=1
 enabled=0
 num=3
 ip=192.168.9.3
 [escalator]
 id=24
-stationID=8
+stationID=9
 type=1
 enabled=0
 num=4
@@ -319,70 +295,67 @@ ip=192.168.9.3
 # Крещатик I
 [escalator]
 id=25
-stationID=9
+stationID=10
 type=1
 enabled=1
 num=1
 ip=192.168.12.3
-direction=2
 [escalator]
 id=26
-stationID=9
+stationID=10
 type=1
 enabled=1
 num=2
 ip=192.168.12.3
-direction=3
 [escalator]
 id=27
-stationID=9
+stationID=10
 type=1
 enabled=1
 num=3
 ip=192.168.12.3
-direction=1
 
-# Крещатик II (н/н)
+# Крещатик II (в/н)
 [escalator]
 id=28
-stationID=10
+stationID=11
 type=1
 enabled=0
 num=1
 ip=192.168.10.3
 [escalator]
 id=29
-stationID=10
+stationID=11
 type=1
 enabled=0
 num=2
 ip=192.168.10.3
 [escalator]
 id=30
-stationID=10
+stationID=11
 type=1
 enabled=0
 num=3
 ip=192.168.10.3
 
-# Крещатик II (в/н)
+# Крещатик II (н/н)
 [escalator]
 id=31
-stationID=11
+stationID=12
 type=1
 enabled=0
 num=1
 ip=192.168.11.3
 [escalator]
 id=32
-stationID=11
+stationID=12
 type=1
 enabled=0
 num=2
 ip=192.168.11.3
 [escalator]
 id=33
-stationID=11
+stationID=12
 type=1
 enabled=0
 num=3
@@ -391,21 +364,21 @@ ip=192.168.11.3
 # Арсенальная (в/н)
 [escalator]
 id=34
-stationID=12
+stationID=13
 type=1
 enabled=0
 num=1
 ip=192.168.13.3
 [escalator]
 id=35
-stationID=12
+stationID=13
 type=1
 enabled=0
 num=2
 ip=192.168.13.3
 [escalator]
 id=36
-stationID=12
+stationID=13
 type=1
 enabled=0
 num=3
@@ -414,21 +387,21 @@ ip=192.168.13.3
 # Арсенальная (н/н)
 [escalator]
 id=37
-stationID=13
+stationID=14
 type=1
 enabled=0
 num=1
 ip=192.168.14.3
 [escalator]
 id=38
-stationID=13
+stationID=14
 type=1
 enabled=0
 num=2
 ip=192.168.14.3
 [escalator]
 id=39
-stationID=13
+stationID=14
 type=1
 enabled=0
 num=3
@@ -437,22 +410,54 @@ ip=192.168.14.3
 # Лесная
 [escalator]
 id=40
-stationID=14
+stationID=15
 type=1
 enabled=0
 num=1
 ip=192.168.15.3
 [escalator]
 id=41
-stationID=14
+stationID=15
 type=1
 enabled=0
 num=2
 ip=192.168.15.3
 [escalator]
 id=42
-stationID=14
+stationID=15
 type=1
 enabled=0
 num=3
 ip=192.168.15.3
+
+# Академгородок 2
+[escalator]
+id=43
+stationID=0
+type=1
+enabled=0
+num=1
+ip=192.168.16.3
+[escalator]
+id=44
+stationID=0
+type=1
+enabled=0
+num=2
+ip=192.168.16.3
+
+# Академгородок 6
+[escalator]
+id=45
+stationID=1
+type=1
+enabled=0
+num=1
+ip=192.168.17.3
+[escalator]
+id=46
+stationID=1
+type=1
+enabled=0
+num=2
+ip=192.168.17.3
