--- a/trunk/modbus_srv/Makefile
+++ b/trunk/modbus_srv/Makefile
@@ -4,7 +4,7 @@ LDFLAGS=
 
 OBJS = modbus.o modbus_srv.o system.o lbuffer.o 
 SRCS = modbus.cpp modbus_srv.cpp system.cpp lbuffer.cpp 
-HDRS = modbus.h modbus_srv.h system.h lbuffer.h global.h types.h
+HDRS = modbus.h modbus_srv.h system.h lbuffer.h global.h types.h watchdog.h
 
 all: 
 	$(CC) $(SRCS) -o modbus_srv $(CFLAGS) $(LDFLAGS) -lsocket
