--- a/trunk/modbus_srv/unitests/serial_tests/Makefile
+++ b/trunk/modbus_srv/unitests/serial_tests/Makefile
@@ -4,7 +4,7 @@ LDFLAGS=
 SRCROOT=../../
 
 OBJS = modbus.o system.o lbuffer.o routeinfo.o test.o
-SRCS = $(SRCROOT)modbus.cpp  $(SRCROOT)system.cpp $(SRCROOT)lbuffer.cpp $(SRCROOT)routeinfo.cpp test.cpp
+SRCS = $(SRCROOT)modbus.cpp  $(SRCROOT)system.cpp $(SRCROOT)lbuffer.cpp  test.cpp
 HDRS = modbus.h system.h lbuffer.h global.h types.h routeinfo.h test.h
 
 all: 
