Ready all codes for loading data from ini files - for exampes of ini files see unit_tests/ directory.

--- a/spider27_old/src/Makefile
+++ b/spider27_old/src/Makefile
@@ -18,7 +18,7 @@ install:
 	for i in ${DIRS} ; do (cd $$i && $(MAKE) install) ; done
 
 test: 
-	echo  '//Don`t edit that file! It was created automatically\n#define __UNIT_TESTING__' > test_cond.h
+	echo  '//Don`t edit that file! It was created automatically\n#define __UNIT_TESTING__\n#define __DEBUG__' > test_cond.h
 
 untest: 
 	echo  '//Don`t edit that file! It was created automatically' > test_cond.h
