Its NOT worked release of spider with added support of morning_start. Created and functionaled window of morning start. NOT writed saving of morning_start to file of escalators; NOT created storing morning start of wich of lines.

--- a/spider27_old/src/Makefile
+++ b/spider27_old/src/Makefile
@@ -19,6 +19,8 @@ install:
 
 test: 
 	echo  '//Don`t edit that file! It was created automatically\n#define __UNIT_TESTING__\n#define __DEBUG__' > test_cond.h
+	echo  '#Don`t edit that file! It was created automatically\nMYLIBS = -lphexlib -lsocket  -lcppunit -lasound' > indLfiles
 
 untest: 
 	echo  '//Don`t edit that file! It was created automatically' > test_cond.h
+	echo  '#Don`t edit that file! It was created automatically\nMYLIBS = -lphexlib -lsocket -lasound' > indLfiles
