--- a/trunk/spider27_old/src/unit_tests/escalators_test.ini
+++ b/trunk/spider27_old/src/unit_tests/escalators_test.ini
@@ -6,8 +6,12 @@ type=1
 enabled=disabled
 num=1
 ip=192.168.0.1
-direction=stop
+direction=up
 predef_direction=up
+start day mode=even
+start hour=5
+start minute=0
+
 
 [escalator]
 id=2
@@ -18,6 +22,9 @@ num=2
 ip=192.168.0.2
 direction=up
 predef_direction=down
+start day mode=everyday
+start hour=4
+start minute=52
 
 [escalator]
 id=3
@@ -28,3 +35,20 @@ num=1
 ip=192.168.0.3
 direction=down
 predef_direction=reverse
+start day mode=never
+start hour=5
+start minute=12
+
+[escalator]
+id=4
+stationID=2
+type=2
+enabled=enabled
+num=1
+ip=192.168.0.4
+direction=down
+predef_direction=up
+start day mode=odd
+start hour=5
+start minute=05
+
