Refactored PrevCmdPull window callbacks. But dont tested command items driwing in rwlist. Refactored EscConfig window callbacks, but not coded activate_esc_config_save callback. All to code it prepared: contain_morinig_start in each of lines, writed and tested metod save in contain_metro_escalators. That metod write to config file changed start_hour, start_minute, start_day_mode, direction and pref_direction data members of metro_escalator. To metro_station added new data member wave_file_name - it contain file with voice of statin name. May be coded: correct resize added new images to escalator states and added new escalator states.

--- a/spider27_old/src/unit_tests/escalators_test.ini
+++ b/spider27_old/src/unit_tests/escalators_test.ini
@@ -6,11 +6,11 @@ type=1
 enabled=disabled
 num=1
 ip=192.168.0.1
-direction=up
-predef_direction=up
-start day mode=even
-start hour=5
-start minute=0
+direction = up
+predef_direction = up
+start day mode = even
+start hour = 5
+start minute = 0
 
 
 [escalator]
@@ -20,11 +20,11 @@ type=3
 enabled=enabled
 num=2
 ip=192.168.0.2
-direction=up
-predef_direction=down
-start day mode=everyday
-start hour=4
-start minute=52
+direction = up
+predef_direction = down
+start day mode = everyday
+start hour = 4
+start minute = 52
 
 [escalator]
 id=3
@@ -33,11 +33,11 @@ type=2
 enabled=enabled
 num=1
 ip=192.168.0.3
-direction=down
-predef_direction=reverse
-start day mode=never
-start hour=5
-start minute=12
+direction = down
+predef_direction = reverse
+start day mode = never
+start hour = 5
+start minute = 12
 
 [escalator]
 id=4
@@ -46,9 +46,9 @@ type=2
 enabled=enabled
 num=1
 ip=192.168.0.4
-direction=down
-predef_direction=up
-start day mode=odd
-start hour=5
-start minute=05
+direction = down
+predef_direction = up
+start day mode = odd
+start hour = 5
+start minute = 5
 
