--- a/spider27_old/src/unit_tests/stations_test.ini
+++ b/spider27_old/src/unit_tests/stations_test.ini
@@ -2,6 +2,7 @@
 [station]
 id=1
 name=first station
+wav file=sounds/station1.wav
 lineID=1
 x=13
 y=15
@@ -9,6 +10,7 @@ y=15
 [station]
 id=2
 name=second station
+wav file=sounds/station2.wav
 lineID=1
 x=21
 y=52
@@ -16,6 +18,7 @@ y=52
 [station]
 id=3
 name=third station
+wav file=sounds/station3.wav
 lineID=2
 x=150
 y=130
