--- a/trunk/spider27_old/src/unit_tests/escalators_test.ini
+++ b/trunk/spider27_old/src/unit_tests/escalators_test.ini
@@ -6,11 +6,11 @@ type=1
 enabled=disabled
 num=1
 ip=192.168.0.1
-direction=up
-predef_direction=up
-start day mode=even
-start hour=5
-start minute=0
+direction = up
+predef_direction = up
+start day mode = even
+start hour = 5
+start minute = 0
 
 
 [escalator]
@@ -20,11 +20,11 @@ type=3
 enabled=enabled
 num=2
 ip=192.168.0.2
-direction=up
-predef_direction=down
-start day mode=everyday
-start hour=4
-start minute=52
+direction = up
+predef_direction = down
+start day mode = everyday
+start hour = 4
+start minute = 52
 
 [escalator]
 id=3
@@ -33,11 +33,11 @@ type=2
 enabled=enabled
 num=1
 ip=192.168.0.3
-direction=down
-predef_direction=reverse
-start day mode=never
-start hour=5
-start minute=12
+direction = down
+predef_direction = reverse
+start day mode = never
+start hour = 5
+start minute = 12
 
 [escalator]
 id=4
@@ -46,9 +46,9 @@ type=2
 enabled=enabled
 num=1
 ip=192.168.0.4
-direction=down
-predef_direction=up
-start day mode=odd
-start hour=5
-start minute=05
+direction = down
+predef_direction = up
+start day mode = odd
+start hour = 5
+start minute = 5
 
