--- a/dbtests/gcc_ntox86/Makefile
+++ b/dbtests/gcc_ntox86/Makefile
@@ -1,17 +1,15 @@
 include ../indTestMode
 include ../indDbobjects
 include ../indTests
+
+include ../indLibs
+
+include ../indLpath
+include ../indIpath
 include ../indVpath
-include ../indLfiles
+
 include ../indOfiles
 include ../indHfiles
-include ../indSfiles
-
-ifdef DBG
-DBG_RELEASE = -O3 -fomit-frame-pointer
-DBG_DEBUG = -O -g
-DEBUG=$(DBG_$(DBG))
-endif
 
 ifndef DEBUG
 DEBUG = -g
@@ -22,7 +20,7 @@ OPTIM = -O
 endif
 
 CXX = qcc
-CXXFLAGS = -Vgcc_ntox86 -fexceptions -Bdynamic $(DEBUG) $(LIBS) -I. -I /usr/local/include/ -L /usr/local/lib/ -L /usr/lib/gcc-lib/ntox86/2.95.2/exceptions -L /usr/ntox86/lib/exceptions
+CXXFLAGS = -Vgcc_ntox86 -w8 -fexceptions -Bdynamic $(DEBUG) $(IPATH) $(LPATH) $(LIBS)
 
 all: $(OBJS) 
 	$(CXX) $(OBJS)  $(CXXFLAGS) -M -o dbtests
@@ -30,5 +28,5 @@ all: $(OBJS)
 clean:
 	rm -f *.o *.map dbtests
 
-$(OBJS) : $(HDRS) $(SRCS)
+$(OBJS) : $(HDRS)
 
