--- a/objects_storage/requests_generator/gcc_ntox86/Makefile
+++ b/objects_storage/requests_generator/gcc_ntox86/Makefile
@@ -9,6 +9,9 @@ include ../indOfiles
 include ../indHfiles
 
 
+DEBUG=-w8
+OPTIM=-O3
+
 ifndef DEBUG
 DEBUG = -g -w8
 endif
@@ -23,8 +26,8 @@ CXXFLAGS = \
    -V gcc_ntox86 \
    -fexceptions \
    -Bstatic \
-    $(OPTIM) \
     $(DEBUG) \
+    $(OPTIM) \
     $(MYIPATH) \
     $(MYLPATH) \
     $(MYLIBS)
