--- a/trunk/objects_storage/Makefile
+++ b/trunk/objects_storage/Makefile
@@ -1,4 +1,6 @@
 ALLDIRS=objects_storage requests_generator
+#DATECMD=date "+%C%y-%m-%d"
+#DATEVALUE=$(DATECMD)
 
 .POHNY: all arh clean
 
@@ -6,7 +8,9 @@ all:
 	for i in ${ALLDIRS} ; do (cd $$i && $(MAKE) all) ; done
 
 arh: clean
-	rm -f objects_storage.tgz
+	rm -f objects_storage*.tgz	
+#	$(DATECMD)
+#	tar -czf objects_storage$(DATECMD).tgz *
 	tar -czf objects_storage.tgz *
 
 clean:
