--- a/trunk/objects_storage/objects_storage/gcc_ntox86/Makefile
+++ b/trunk/objects_storage/objects_storage/gcc_ntox86/Makefile
@@ -10,6 +10,9 @@ include ../indHfiles
 
 .POHNY: all clean test untest linter
 
+DEBUG=-w8
+OPTIM=-O3
+
 ifndef DEBUG
 DEBUG = -g -w8
 endif
@@ -19,21 +22,24 @@ OPTIM = -O0
 endif
 
 CXX = qcc
+CC = $(CXX)
 CXXFLAGS = \
    -V gcc_ntox86 \
    -fexceptions \
    -Bstatic \
     $(DEBUG) \
+    $(OPTIM) \
     $(MYIPATH) \
     $(MYLPATH) \
     $(MYLIBS)
 
+CFLAGS=$(CXXFLAGS)
 
 all: $(OBJECTS) 
-	$(CXX) $(OBJECTS) $(CXXFLAGS) -M -o objects_storage
+	$(CXX) $(OBJECTS) $(CXXFLAGS) -M -o depository
 
 clean:
-	rm -f *.o *.map objects_storage
+	rm -f *.o *.map depository
 
 $(OBJECTS) : $(HEADERS)
 
@@ -48,6 +54,10 @@ untest:
 linter:
 	echo  '//Don`t edit that file! It was created automatically\n#define _LINTER_DBWRAPPER_' > ../dbwrapper_definition.h
 	echo  '#Don`t edit that file! It was created automatically\nLINTER_DBWRAPPER = 1\n' > ../indDbwrapper
+
+extreamedb:
+	echo  '//Don`t edit that file! It was created automatically\n#define _EXTREAME_DB_DBWRAPPER_' > ../dbwrapper_definition.h
+	echo  '#Don`t edit that file! It was created automatically\nEXTREAME_DB_DBWRAPPER = 1\n' > ../indDbwrapper
 
 mock:
 	echo  '//Don`t edit that file! It was created automatically\n#define _MOCK_DBWRAPPER_' > ../dbwrapper_definition.h
