--- a/spider/modbus_srv/gcc_ntox86/modbus_srv.conf
+++ b/spider/modbus_srv/gcc_ntox86/modbus_srv.conf
@@ -2,29 +2,25 @@
 [escalator]
     number=1
 
-#first udku
-[udku]
-     number=3
-
 # second escalator
-#[escalator]
-#    number=2
+[escalator]
+    number=2
 
 # third escalator
-#[escalator]
-#    number=3
+[escalator]
+    number=3
 
 # fourth escalator
-#[escalator]
-#    number=4
+[escalator]
+    number=4
 
 # shavr
-#[shavr]
-#    number=5
+[shavr]
+    number=5
 
 #routing
 [routing]
-routing manipulating=enabled
+routing manipulating=disabled
 gateway=192.168.5.1
 gateway=192.168.5.2
 
@@ -45,8 +41,14 @@ port number=1091
 [settings]
 welcome=Modbus server v1.2
 welcome=station Test station 
-#welcome=4 escalators( device number 1,2,3,4) 
-#welcome=1 shavr(device number 5)
-welcome=1 udku(device number 1)
+welcome=4 escalators( device number 1,2,3,4) 
+welcome=1 shavr(device number 5)
+#welcome=1 udku(device number 1)
 comport koeff=2
+const delay=500
 baud rate=19200
+flush after send=0
+flush before recieve=1
+delay between cmds = 990000
+comport recieve timeout=15
+rts delay=7000
